--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#">Турниры</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:fastcups' %}">Фасткапы</a>
+            <a class="nav-link" href="{% url 'core:fastcups' 'fastcups' %}">Фасткапы</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#">Трансляции</a>
