--- a/haxball_site/templates/core/include/post_important_in_list.html
+++ b/haxball_site/templates/core/include/post_important_in_list.html
@@ -1,10 +1,10 @@
 {% load static %}
 {% load user_tags %}
 
-<div class="card mx-1 my-2">
+<div class="card mx-1 my-2" style="border-radius:20px;">
 
     <a href="{{ post.get_absolute_url }}" type="button"
-       class="button btn btn-outline-dark btn-lg btn-block">
+       class="button btn btn-outline-dark btn-lg btn-block" style="border-radius:20px 20px 0px 0px;">
 
         {{ post.title }}
         {% if post.created|is_fresh:5 %}
@@ -18,32 +18,28 @@
         </div>
     </div>
 
-    <div class="card-footer px-3 py-1 d-inline-flex justify-content-between">
-        <span class="text-muted"> <img src="{% static "img/ico/calendar_1.png" %}" height="21"
-                                       width="21">  {{ post.created|date:"SHORT_DATE_FORMAT" }} <img
-                    src="{% static "img/ico/clock_1.png" %}" height="19" width="19"> {{ post.created|time:"H:i" }} <img
-                    src="{% static "img/ico/user_1.png" %}" height="19" width="19"><a
-                    href="{{ post.author.user_profile.get_absolute_url }}">{{ post.author }}</a>,
-            Комментариев: {{ post.comments.count }}</span>
+    <div class="card-footer px-3 py-1 d-inline-flex justify-content-between" style="border-radius:0px 0px 20px 20px;">
+        <span class="text-muted"> <i class="fa fa-calendar text-primary" aria-hidden="true"></i>  {{ post.created|date:"SHORT_DATE_FORMAT" }}
+            <i class="fa fa-clock-o text-primary" aria-hidden="true"></i>{{ post.created|time:"H:i" }}<a
+                    href="{{ post.author.user_profile.get_absolute_url }}" class="fa fa-user-o text-primary pl-1">{{ post.author }}</a>,
+            <i class="fa fa-comments-o text-primary" aria-hidden="true"></i>{{ post.comments.count }}</span>
 
 
 
         {% if user.is_authenticated %}
-        <div class="btn-group btn-group-toggle vote">
-          <label style="border-radius: 8px" class="py-0 px-1 btn btn-sm btn-outline-success
-                {% if post.votes.likes.all|user_in:user %}active{% endif %}"
-                 data-id="{{ post.id }}" data-type="post" data-action="like" id="l{{ post.id }}" title="Нравится">
-              <img src="{% static "img/svg/hand-thumbs-up.svg" %}">
-              <span data-count="like" class="font-weight-bold">{{ post.votes.likes.count }}</span>
+        <ul class="list-group list-group-horizontal-md d-inline-flex">
+                                    <li class="action-like fa fa-thumbs-up {% if post.votes.likes.all|user_in:user %}text-success{% endif %}"
+                                       data-id="{{ post.id }}" data-type="post" data-action="like" id="lpost{{ post.id }}" title="Нравится">
+                                        <span data-count="like">{{ post.votes.likes.count }}</span>
+                                    </li>
 
-          </label>
+                                    <li class="action-dislike fa fa-thumbs-down {% if post.votes.dislikes.all|user_in:user %}text-danger{% endif %}"
+                                        data-id="{{ post.id }}" data-type="post" data-action="dislike" id="dpost{{ post.id }}" title="Не нравится">
 
-          <label style="border-radius: 8px" class="py-0 px-1 btn btn-sm btn-outline-danger {% if post.votes.dislikes.all|user_in:user %}active{% endif %}"
-                 data-id="{{ post.id }}" data-type="post" data-action="dislike" id="d{{ post.id }}" title="Мас петух">
-              <img src="{% static "img/svg/hand-thumbs-down.svg" %}">
-              <span data-count="dislike" class="font-weight-bold">{{ post.votes.dislikes.count }}</span>
-          </label>
-        </div>
+                                        <span data-count="dislike">{{ post.votes.dislikes.count }}</span>
+                                    </li>
+                                </ul>
+
         {% endif %}
     </div>
 
