--- a/haxball_site/templates/core/post/list.html
+++ b/haxball_site/templates/core/post/list.html
@@ -39,11 +39,10 @@
             var action = like.data('action');
             var dislike = like.next();
 
-
-            var l_id = 'l' + pk
-            var d_id = 'd' + pk
-            $('#' + l_id).toggleClass('active');
-            $('#' + d_id).removeClass('active');
+            var l_id = 'l' + type + pk
+            var d_id = 'd' + type + pk
+            $('#' + l_id).toggleClass('text-success');
+            $('#' + d_id).removeClass('text-danger');
 
             $.ajax({
                 url: "/api/" + type + "/" + pk + "/" + action + "/",
@@ -68,10 +67,11 @@
             var action = dislike.data('action');
             var like = dislike.prev();
 
-            var l_id = 'l'+pk
-            var d_id = 'd'+pk
-            $('#'+d_id).toggleClass('active');
-            $('#'+l_id).removeClass('active');
+            var l_id = 'l' + type + pk
+            var d_id = 'd' + type + pk
+            $('#' + d_id).toggleClass('text-danger');
+            $('#' + l_id).removeClass('text-success');
+
 
             $.ajax({
                 url: "/api/" + type + "/" + pk + "/" + action + "/",
@@ -109,8 +109,9 @@
 {% block postlist %}
 <div class="card my-2" style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
     <div class="card-body">
-    <h3 class="text-center mt-1 mb-0"><img src="{% static "img/ico/important.png" %}" height="37" width="37" style="vertical-align: top";>
-        Важная информация!
+    <h3 class="text-center mt-1 mb-0"><i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
+
+        Важная информация <i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
     </h3>
     <hr>
     {% for post in posts %}
@@ -118,7 +119,7 @@
             {% include "core/include/post_important_in_list.html" with post=post %}
         {% endif %}
     {% endfor %}
-    <h3 class="text-center mb-0"><img src="{% static "img/ico/news-icon-1.png" %}" height="37" width="37" style="vertical-align: top";> Последние новости</h3>
+    <h3 class="text-center mb-0"><i class="fa fa-newspaper-o text-success" aria-hidden="true"></i> Последние новости</h3>
     <hr>
 
     {% for post in posts %}
