--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -56,7 +56,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="#">Обсуждения</a>
+            <a class="nav-link" href="{% url 'core:forum' %}">Обсуждения</a>
         </li>
 
 
