--- a/haxball_site/templates/core/lives/lives_list.html
+++ b/haxball_site/templates/core/lives/lives_list.html
@@ -101,6 +101,7 @@
 
 {% endblock %}
 
+{% block title %}Трансляции{% endblock %}
 {% block postlist %}
 <div class="card my-2"
      style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
