--- a/haxball_site/templates/core/fastcups/fastcups_list.html
+++ b/haxball_site/templates/core/fastcups/fastcups_list.html
@@ -101,6 +101,8 @@
 
 {% endblock %}
 
+{% block title %}Фасткапы{% endblock %}
+
 {% block postlist %}
 <div class="card my-2"
      style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
