--- a/haxball_site/templates/core/include/post_in_list.html
+++ b/haxball_site/templates/core/include/post_in_list.html
@@ -25,25 +25,21 @@
                 href="{{ post.author.user_profile.get_absolute_url }}">{{ post.author }}</a>,
             Комментариев: {{ post.comments.count }}</span>
 
-        {% if user.is_authenticated %}
-            <div class="btn-group btn-group-toggle vote">
-                <label style="border-radius: 8px" class="py-0 px-1 btn btn-sm btn-outline-success
-                {% if post.votes.likes.all|user_in:user %}active{% endif %}"
-                       data-id="{{ post.id }}" data-type="post" data-action="like" id="l{{ post.id }}" title="Нравится">
-                    <img src="{% static "img/svg/hand-thumbs-up.svg" %}">
-                    <span data-count="like" class="font-weight-bold">{{ post.votes.likes.count }}</span>
-                </label>
+            {% if user.is_authenticated %}
+                             <ul class="list-group list-group-horizontal-md d-inline-flex">
+                                        <li class="action-like fa fa-thumbs-up {% if post.votes.likes.all|user_in:user %}text-success{% endif %}"
+                                           data-id="{{ post.id }}" data-type="post" data-action="like" id="lpost{{ post.id }}" title="Нравится">
+                                            <span data-count="like">{{ post.votes.likes.count }}</span>
+                                        </li>
 
-                <label style="border-radius: 8px"
-                       class="py-0 px-1 btn btn-sm btn-outline-danger {% if post.votes.dislikes.all|user_in:user %}active{% endif %}"
-                       data-id="{{ post.id }}" data-type="post" data-action="dislike" id="d{{ post.id }}"
-                       title="Мас петух">
-                    <img src="{% static "img/svg/hand-thumbs-down.svg" %}">
-                    <span data-count="dislike" class="font-weight-bold">{{ post.votes.dislikes.count }}</span>
-                </label>
+                                        <li class="action-dislike fa fa-thumbs-down {% if post.votes.dislikes.all|user_in:user %}text-danger{% endif %}"
+                                            data-id="{{ post.id }}" data-type="post" data-action="dislike" id="dpost{{ post.id }}" title="Не нравится">
 
-            </div>
-        {% endif %}
+                                            <span data-count="dislike">{{ post.votes.dislikes.count }}</span>
+                                        </li>
+                                    </ul>
+
+            {% endif %}
 
     </div>
 </div>
