--- a/haxball_site/templates/core/forum/add_post.html
+++ b/haxball_site/templates/core/forum/add_post.html
@@ -5,6 +5,9 @@
 <div class="card my-2"
      style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
 
+    {% if user == post.author %}
+
+
     <div class="card-body">
         <h3 class="text-center mt-1 mb-0"><i class="fa fa-list-alt text-primary" aria-hidden="true"></i>
 
@@ -21,6 +24,11 @@
 
 
     </div>
+    {% else %}
+        <h1 class="display-1 text-center">Куда ЛЕЗЕМ</h1>
+        <h1 class="display-1 text-center text-danger">ЁПТА</h1>
+        <h1 class="display-1 text-center text-warning">ААААААА?</h1>
+    {% endif %}
 
 </div>
 {% endblock %}
