--- a/haxball_site/templates/core/forum/add_post.html
+++ b/haxball_site/templates/core/forum/add_post.html
@@ -5,7 +5,8 @@
 <div class="card my-2"
      style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
 
-    {% if user == post.author %}
+
+    {% if user.is_authenticated %}
 
 
     <div class="card-body">
