--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -9,7 +9,7 @@
     </form>
 
     <a class="navbar-brand nav-item" href="{% url 'core:home' %}">
-        <div class="page-name"> Чемпионат России по хаксболлу</div>
+        <div class="page-name"> Чемпионат России по футзалу</div>
     </a>
 </nav>
 
@@ -56,7 +56,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="{% url 'core:forum' %}">Обсуждения</a>
+            <a class="nav-link" href="{% url 'core:forum' %}">Форум</a>
         </li>
 
 
