--- a/haxball_site/templates/core/include/post_in_list.html
+++ b/haxball_site/templates/core/include/post_in_list.html
@@ -26,19 +26,7 @@
             Комментариев: {{ post.comments.count }}</span>
 
             {% if user.is_authenticated %}
-                             <ul class="list-group list-group-horizontal-md d-inline-flex">
-                                        <li class="action-like fa fa-thumbs-up {% if post.votes.likes.all|user_in:user %}text-success{% endif %}"
-                                           data-id="{{ post.id }}" data-type="post" data-action="like" id="lpost{{ post.id }}" title="Нравится">
-                                            <span data-count="like">{{ post.votes.likes.count }}</span>
-                                        </li>
-
-                                        <li class="action-dislike fa fa-thumbs-down {% if post.votes.dislikes.all|user_in:user %}text-danger{% endif %}"
-                                            data-id="{{ post.id }}" data-type="post" data-action="dislike" id="dpost{{ post.id }}" title="Не нравится">
-
-                                            <span data-count="dislike">{{ post.votes.dislikes.count }}</span>
-                                        </li>
-                                    </ul>
-
+                {% include 'core/include/like_dislike_panel.html' %}
             {% endif %}
 
     </div>
