--- a/haxball_site/templates/account/login.html
+++ b/haxball_site/templates/account/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "core/home.html" %}
 {% load static %}
 {% load i18n %}
 {% load account %}
@@ -8,7 +8,7 @@
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
 {% endblock %}
-{% block content %}
+{% block post %}
 
     {#% get_providers as socialaccount_providers %#}
     <h1>{% trans "Sign In" %}</h1>
