--- a/haxball_site/templates/account/signup.html
+++ b/haxball_site/templates/account/signup.html
@@ -1,27 +1,57 @@
-{% extends "base.html" %}
+{% extends "core/home.html" %}
 {% load static %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
-{% block styles %}
-    <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
-{% endblock %}
-{% block content %}
 
+{% block post %}
 
+<div class="card">
+    <div class="card-header text-center">
     <h1>{% trans "Sign Up" %}</h1>
 
     <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
     </p>
+    </div>
 
-    <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-        {% csrf_token %}
-        {{ form.as_p }}
-        {% if redirect_field_value %}
+    <div class="card-body">
+        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            {% csrf_token %}
+            <!-- {{ form.as_p }} -->
+            <div class="form-group">
+                <label for="exampleInputEmail1">Имя пользователя</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                       name="username">
+                <small id="emailHelp" class="form-text text-muted">Ваш игровой никнейм</small>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail2">Email address</label>
+                <input type="email" class="form-control" id="exampleInputEmail2" name="email" aria-describedby="emailHelp">
+
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Пароль</label>
+                <input type="password" class="form-control" id="exampleInputPassword1"
+                       name="password1">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword2">Повторите пароль</label>
+                <input type="password" class="form-control" id="exampleInputPassword2"
+                       name="password2">
+            </div>
+            <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="exampleCheck1"
+                       required="True">
+                <label class="form-check-label" for="exampleCheck1">Ознакомлен с правилами(ссылка на правила)</label>
+            </div>
+
+
+            {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
-        {% endif %}
-        <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-    </form>
-
+            {% endif %}
+            <button type="submit" class="btn btn-success">Зарегистрироваться</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
