--- a/haxball_site/templates/core/include/pagination.html
+++ b/haxball_site/templates/core/include/pagination.html
@@ -1,4 +1,4 @@
-<nav aria-label="Page navigation" class="bot_nav_page">
+<nav aria-label="Page navigation" class="bot_nav_page m-0">
     <ul class="pagination justify-content-center">
         {% if page.has_previous %}
             <li class="page-item">
