--- a/haxball_site/templates/account/signup.html
+++ b/haxball_site/templates/account/signup.html
@@ -3,7 +3,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block title %}{% trans "Signup" %}{% endblock %}
 
 {% block post %}
 
@@ -23,7 +23,7 @@
                 <label for="exampleInputEmail1">Имя пользователя</label>
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
                        name="username">
-                <small id="emailHelp" class="form-text text-muted">Ваш игровой никнейм</small>
+                <small id="emailHelp" class="form-text text-muted">Ваш игровой никнейм <span class="text-danger"><strong>ИЗМЕНЕНИЕ - ПЛАТНО!</strong></span></small>
             </div>
             <div class="form-group">
                 <label for="exampleInputEmail2">Email address</label>
