--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -43,7 +43,7 @@
             <a class="nav-link" href="{% url 'core:lives' %}">Трансляции</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                 Архив
             </a>
             <div class="dropdown-menu">
@@ -68,7 +68,7 @@
     {% if user.is_authenticated %}
         <a class="p-2" href="{{ user.user_profile.get_absolute_url }}">{{ user.username }}</a>
     {% else %}
-        <a class="p-2 bd-highlight" href="{% url 'account_signup' %}">Регистрация</a>
+        <a role="button" class="btn btn-success mr-1" href="{% url 'account_signup' %}">Регистрация</a>
     {% endif %}
 
     {% if user.is_authenticated %}
