--- a/haxball_site/templates/core/post/all_posts_list.html
+++ b/haxball_site/templates/core/post/all_posts_list.html
@@ -1,6 +1,8 @@
 {% extends "core/home.html" %}
 {% load static %}
 
+{% block title %} Все новости {% endblock %}
+
 {% block scripts %}
 
     <!-- Аякс-скрипт проставления лайков-дизлайков к постам -->
@@ -108,33 +110,17 @@
 
 {% block postlist %}
 <div class="card my-2" style="border-radius: 25px; background-image: url({% static "img/backgrounds/background1.png" %})">
-
     <div class="card-body">
-        <h3 class="text-center mt-1 mb-0"><i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
 
-            Важная информация <i class="fa fa-exclamation text-danger" aria-hidden="true"></i>
-        </h3>
+    <h3 class="text-center mb-0"><i class="fa fa-newspaper-o text-success" aria-hidden="true"></i> Все новости</h3>
         <hr>
         {% for post in posts %}
-            {% if post.important %}
-                {% include "core/include/post_important_in_list.html" with post=post %}
-            {% endif %}
-        {% endfor %}
-        <h3 class="text-center mb-0"><i class="fa fa-newspaper-o text-success" aria-hidden="true"></i> Последние новости</h3>
-        <hr>
-
-        {% for post in posts %}
-            {% if not post.important %}
                 {% include "core/include/post_in_list.html" with post=post %}
-            {% endif %}
         {% endfor %}
     </div>
-
-
-    <div class="card-footer text-muted">
-        <a href="{% url 'core:all_posts' %}">Смотреть все новости</a>
+        <div class="card-footer text-muted pb-0 pt-3">
+        {% include "core/include/pagination.html" with page=page_obj %}
     </div>
-
 </div>
 
 {% endblock %}
