--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -15,7 +15,7 @@
         <div class="row m-l-0 m-r-0">
             <div class="col-sm-4 bg-c-lite-green user-profile">
                 <div class="card-block text-center text-white">
-                    <div class="m-b-10"><img src="{{ profile.avatar.url }}" width="100%" height="200"
+                    <div class="m-b-10"><img src="{{ profile.avatar.url }}" width="100%" height="100%"
                                              class="img-radius" alt="User-Profile-Image"></div>
                     <h4 class="f-w-600">{{ profile.name }}
                         {% if profile.name.is_superuser %}
