--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -1,15 +1,15 @@
 {% load static %}
 
 <nav class="navbar navbar-light navbar_color nav-fill"
-     style=background-image:url({% static "img/backgrounds/background1.png" %})>
+     style=background-image:url({% static "img/backgrounds/geometric-pat-003.jpg" %})>
 
     <form class="form-inline">
         <input class="form-control mr-sm-2" type="search" placeholder="Поиск" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Поиск</button>
     </form>
 
     <a class="navbar-brand nav-item" href="{% url 'core:home' %}">
-        <div class="page-name"> Чемпионат России по футзалу</div>
+        <div class="page-name"> !</div>
     </a>
     <div class="mr-100">
 <iframe src="https://money.yandex.ru/quickpay/button-widget?targets=%D0%9F%D0%BE%D0%B6%D0%B5%D1%80%D1%82%D0%B2%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&default-sum=200&button-text=14&yamoney-payment-type=on&button-size=m&button-color=black&successURL=&quickpay=small&account=410011043451485&" width="250" height="36" frameborder="0" allowtransparency="true" scrolling="no"></iframe>        </div>
