--- a/haxball_site/templates/core/include/profile_editor_form.html
+++ b/haxball_site/templates/core/include/profile_editor_form.html
@@ -54,6 +54,25 @@
                             </div>
                         </div>
 
+                        <h5 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Способы связи</h5>
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="m-b-10 f-w-600">Вк</p>
+                                <input type="text" class="form-control" name="vk" value="{{ profile.vk }}">
+
+                            </div>
+
+                            <div class="col-4">
+                                <p class="m-b-10 f-w-600">Телега</p>
+                                <input type="text" class="form-control" name="telegram" value="{{ profile.telegram }}">
+                            </div>
+
+                            <div class="col-4">
+                                <p class="m-b-10 f-w-600">Дискорд</p>
+                                <input type="text" class="form-control" name="discord" value="{{ profile.discord }}">
+                            </div>
+                        </div>
+
                         <h5 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Активность</h5>
                         <div class="row">
                             <div class="col-sm-4 text-center">
