--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -29,9 +29,15 @@
                     <p class="mb-1">Без команды</p>
                     <p>Рейтинг {% karma profile %}</p>
                     <p class="mb-0">
-                        <img src="{% static "img/ico/vk_1.png" %}" height="41" width="41" title="vk">
-                        <img src="{% static "img/ico/discord_1.png" %}" height="41" width="41" title="vk">
-                        <img src="{% static "img/ico/tg_1.png" %}" height="41" width="41" title="vk">
+                        {% if profile.vk %}
+                            <a href="{{ profile.vk }}"><img src="{% static "img/ico/vk_1.png" %}" height="41" width="41" title="vk"></a>
+                        {% endif %}
+                        {% if profile.discord %}
+                            <img src="{% static "img/ico/discord_1.png" %}" height="41" width="41" title="{{ profile.discord }}">
+                        {% endif %}
+                        {% if profile.telegram %}
+                            <a href="https://t.me/{{ profile.telegram }}"><img src="{% static "img/ico/tg_1.png" %}" height="41" width="41" title="telegram"></a>
+                        {% endif %}
                     </p>
                 </div>
             </div>
