--- a/haxball_site/templates/core/include/profile_editor_form.html
+++ b/haxball_site/templates/core/include/profile_editor_form.html
@@ -57,18 +57,23 @@
                         <h5 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Способы связи</h5>
                         <div class="row">
                             <div class="col-4">
-                                <p class="m-b-10 f-w-600">Вк</p>
+                                <p class="f-w-600" style="margin-bottom: 0">Вк</p>
+                                <p class="text-muted small" style="margin-bottom: 0">id/никнейм (id12345)</p>
+
                                 <input type="text" class="form-control" name="vk" value="{{ profile.vk }}">
 
                             </div>
 
                             <div class="col-4">
-                                <p class="m-b-10 f-w-600">Телега</p>
+                                <p class="f-w-600" style="margin-bottom: 0">Telegram</p>
+                                <p class="text-muted small" style="margin-bottom: 0">Укажите ваш никнейм</p>
                                 <input type="text" class="form-control" name="telegram" value="{{ profile.telegram }}">
                             </div>
 
                             <div class="col-4">
-                                <p class="m-b-10 f-w-600">Дискорд</p>
+                                <p class="f-w-600" style="margin-bottom: 0">Discord</p>
+                                <p class="text-muted small" style="margin-bottom: 0">Имя#1234</p>
+
                                 <input type="text" class="form-control" name="discord" value="{{ profile.discord }}">
                             </div>
                         </div>
