--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -102,7 +102,7 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <h6 class="text-muted f-w-400">
-                                {{ profile.about }}
+                                {{ profile.about|linebreaks }}
                             </h6>
                         </div>
                     </div>
